// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component combines multiple props 1`] = `
<Text
  level="lg"
  strong={true}
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "fontFamily": "Inter_400Regular",
      },
      {
        "color": "primary",
      },
      {
        "textAlign": "center",
      },
      false,
      undefined,
    ]
  }
>
  Combined Props Text
</Text>
`;

exports[`Text Component renders with center alignment 1`] = `
<Text
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "fontFamily": "Inter_400Regular",
      },
      {
        "color": "#0F172A",
      },
      {
        "textAlign": "center",
      },
      false,
      undefined,
    ]
  }
>
  Centered Text
</Text>
`;

exports[`Text Component renders with custom color 1`] = `
<Text
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "fontFamily": "Inter_400Regular",
      },
      {
        "color": "secondary",
      },
      false,
      false,
      undefined,
    ]
  }
>
  Colored Text
</Text>
`;

exports[`Text Component renders with default props 1`] = `
<Text
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "fontFamily": "Inter_400Regular",
      },
      {
        "color": "#0F172A",
      },
      false,
      false,
      undefined,
    ]
  }
>
  Hello World
</Text>
`;

exports[`Text Component renders with different levels 1`] = `
<Text
  level="lg"
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "fontFamily": "Inter_400Regular",
      },
      {
        "color": "#0F172A",
      },
      false,
      false,
      undefined,
    ]
  }
>
  Large Text
</Text>
`;

exports[`Text Component renders with strong styling 1`] = `
<Text
  strong={true}
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "fontFamily": "Inter_400Regular",
      },
      {
        "color": "#0F172A",
      },
      false,
      false,
      undefined,
    ]
  }
>
  Strong Text
</Text>
`;

exports[`Text Component renders with subtitle variant 1`] = `
<Text
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "fontFamily": "Inter_400Regular",
      },
      {
        "color": "#0F172A",
      },
      false,
      false,
      undefined,
    ]
  }
>
  Subtitle Text
</Text>
`;

exports[`Text Component renders with title variant 1`] = `
<Text
  style={
    [
      {
        "fontSize": 14,
        "lineHeight": 21,
      },
      {
        "fontFamily": "Inter_400Regular",
      },
      {
        "color": "#0F172A",
      },
      false,
      false,
      undefined,
    ]
  }
>
  Title Text
</Text>
`;
